add api of topic review
